termux-packages: Fix problem with android-sdk-tools
Signed-off-by: Yuvraj Saxena <ysaxenax@gmail.com>